fix dropdown menu color and z-index

--- a/src/App.css
+++ b/src/App.css
@@ -92,14 +92,14 @@
   position: absolute;
   top: 70px;
   right: 30px;
-  background-color: #4e46e517;
+  background-color: #e3e2ff;
   border-radius: 15px;
   color: #334155;
   font-weight: 500;
   box-shadow:
     0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
-  z-index: 10;
+  z-index: 999;
   min-width: 250px;
   overflow: hidden;
 }
@@ -142,7 +142,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 0;
+  z-index: 999;
 }
 
 /* Questions page */
